refactor: put back dashboards at env level
(cherry picked from commit 16f6b354fe305f25245c9f979bac016476f18c0f)